# kingkiosk-client2

./: .gitignore copy  ALARMO_INTEGRATION_GUIDE.md  ALERT_FIXES_SUMMARY.md  ANDROID_KIOSK_IMPLEMENTATION.md  ANDROID_LAUNCHER_KIOSK_COMPLETE.md  AUDIO_OVERFLOW_FIX.md  AUDIO_VISUALIZER_IMPLEMENTATION_COMPLETE.md  AUTO_DISMISS_IMPLEMENTATION_COMPLETE.md  BATCH_KILL_IMPLEMENTATION.md  CALENDAR_IMPLEMENTATION_COMPLETE.md  CALENDAR_INTEGRATION_TEST_RESULTS.md  CALENDAR_MQTT_COMMANDS.md  CALENDAR_MQTT_SUCCESS_LOG.md  CAMERA_RESOLUTION_TEST.md  COMPLETE_PLATFORM_IMPLEMENTATION_SUMMARY.md  ENHANCED_KIOSK_IMPLEMENTATION.md  ENHANCED_TOOLBAR_IMPLEMENTATION_COMPLETE.md  FINAL_COMPLETION_REPORT.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_STATUS_REPORT.md  FIXES.md  FIXES_IMPLEMENTED.md  FIXES_SUMMARY.md  FLUTTER_STATE_ERRORS.md  FLUTTER_WINDOWS_API_FIX.md  GETX_BEST_PRACTICES.md  GETX_SETSTATE_REFACTORING_PLAN.md  IMAGE_CAROUSEL_MQTT_COMMANDS.md  INSTALLATION_GUIDE.md  ISAR_STORAGE_MIGRATION_COMPLETE.md  KILL_BATCH_TEST_GUIDE.md  LATEST_FIXES.md  MEDIA_DEVICE_DECOUPLING_COMPLETE.md  MEDIA_PERSISTENCE_FIX.md  MEMORY_OPTIMIZATION_GUIDE.md  MEMORY_OPTIMIZATION_IMPLEMENTATION.md  MISSION_ACCOMPLISHED.md  ML_ANALYSIS_OPTIMIZATION_COMPLETE.md  MQTT_CALENDAR_COMMANDS.md  MQTT_DOCUMENTATION.md  (+187 more)
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
assets/data/: sample_data.json
assets/models/: README.md
docs/: ANDROID_BUILD_GUIDE.md  ANDROID_SCREENSHOT_PERMISSIONS.md  BATCH_COMMANDS.md  BATCH_COMMANDS_IMPLEMENTATION.md  CLEAN_SHUTDOWN_TESTS.md  CODE_CLEANUP_REPORT.md  CUSTOM_TITLES.md  FIXED_COMPONENTS_README.md  FIXES_COMPLETE.md  FIXES_IMPLEMENTED_NEW.md  GETX_BEST_PRACTICES.md  IMAGE_CAROUSEL_FEATURE.md  IMAGE_DISPLAY_FEATURE.md  INTEGRATION.md  MIGRATION_GUIDE.md  MQTT_CLEANUP.md  MQTT_COMMANDS.md  MQTT_NOTIFICATION_USAGE.md  MQTT_SCREENSHOT_USAGE.md  SCREENSHOT_PERMISSIONS.md  SYSTEM_REQUIREMENTS.md  halo_effect_feature.md  halo_effect_fix_summary.md  halo_effect_fixes.md  halo_effect_robustness.md  halo_effect_updates.md  macos_setup.md  window_halo_effect_feature.md  window_halo_effect_implementation_summary.md  window_halo_effect_verification.md
docs/homeassistant_demo/: README.md  configuration.yaml  docker-compose.yml
examples/: README.md  mqtt_provision_example.py
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: check_web_resource_error_types.dart  main.dart  main.dart.new  temp_check_error_types.dart  temp_error_types.dart  temp_flutter_html_test.dart  test_autolock.dart  test_image_feature.dart  verify_ssl_fixes.dart  window_halo_test_app.dart
lib/demo/: webrtc_texture_mapping_demo.dart  webrtc_texture_mapping_demo.dart.bak  (+1 more)
linux/: CMakeLists.txt
linux/runner/plugins/frame_capture_linux/: CMakeLists.txt  frame_capture_plugin.cc  frame_capture_plugin.h
macos/: copy_tflite_libs.sh  custom_build_phase.sh
patches/: image_gallery_saver_build.gradle
test/: alarmo_core_test.dart  alarmo_integration_test.dart  alarmo_integration_test_fixed.dart  calendar_mqtt_test.dart  memory_optimization_test.dart  widget_test.dart
test_implementations/: ssl_certificate_handler.dart
web/: index.html  manifest.json  secure_storage_config.js
windows/: CMakeLists.txt
windows/plugins/windows_kiosk/: CMakeLists.txt  windows_kiosk_plugin.h  windows_kiosk_plugin_new.cpp
windows/runner/plugins/frame_capture_windows/: CMakeLists.txt  frame_capture_plugin.cpp  frame_capture_plugin.h
(+271 files in other folders)
